# agent-core-sdk

./: .gitignore  README.md  pyproject.toml
docker/vespa/: docker-compose.yml
docker/vespa/schemas/: rag_document.sd
src/agent_core/: __init__.py
src/agent_core/llm/: __init__.py  client.py
src/agent_core/observability/: __init__.py  attributes.py  evaluators.py  tracing.py
src/agent_core/rag/: __init__.py  embedding.py
src/agent_core/rag/infrastructure/: __init__.py  base.py  chroma_store.py  vespa_store.py
src/agent_core/state/: __init__.py  reducers.py
src/agent_core/tools/: __init__.py  files.py  search.py  weather.py
